--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -42,3 +42,27 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.15
+        id: go
+      - uses: actions/checkout@master
+        with:
+          submodules: true
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
+      - run: go run main.go
+
+      - name: git setting
+        run: |
+          git config --global user.email "gs2ygc@gmail.com"
+          git config --global user.name "Gs-ygc"
+          
+      - name: update
+        run: |
+          git add .
+          git diff-index --quiet HEAD || git commit -m "feat: auto update by action"
+          git push
